Change of Image location

--- a/index.html
+++ b/index.html
@@ -25,110 +25,110 @@
 	</header>
 	<!-- images -->
 	<section class="grid">		
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-01.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-01.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-01.JPG">
+			<img class="grid-images" src="images/portfolio-01.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-02.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-02.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-02.JPG">
+			<img class="grid-images" src="images/portfolio-02.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-03.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-03.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-03.JPG">
+			<img class="grid-images" src="images/portfolio-03.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-04.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-04.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-04.JPG">
+			<img class="grid-images" src="images/portfolio-04.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-05.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-05.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-05.JPG">
+			<img class="grid-images" src="images/portfolio-05.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-06.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-06.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-06.JPG">
+			<img class="grid-images" src="images/portfolio-06.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-07.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-07.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-07.JPG">
+			<img class="grid-images" src="images/portfolio-07.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-08.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-08.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-08.JPG">
+			<img class="grid-images" src="images/portfolio-08.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-09.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-09.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-09.JPG">
+			<img class="grid-images" src="images/portfolio-09.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-10.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-10.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-10.JPG">
+			<img class="grid-images" src="images/portfolio-10.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-11.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-11.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-11.JPG">
+			<img class="grid-images" src="images/portfolio-11.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-12.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-12.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-12.JPG">
+			<img class="grid-images" src="images/portfolio-12.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-13.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-13.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-13.JPG">
+			<img class="grid-images" src="images/portfolio-13.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-14.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-14.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-14.JPG">
+			<img class="grid-images" src="images/portfolio-14.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-15.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-15.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-15.JPG">
+			<img class="grid-images" src="images/portfolio-15.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-16.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-16.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-16.JPG">
+			<img class="grid-images" src="images/portfolio-16.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-17.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-17.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-17.JPG">
+			<img class="grid-images" src="images/portfolio-17.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-18.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-18.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-18.JPG">
+			<img class="grid-images" src="images/portfolio-18.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-19.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-19.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-19.JPG">
+			<img class="grid-images" src="images/portfolio-19.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-20.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-20.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-20.JPG">
+			<img class="grid-images" src="images/portfolio-20.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-21.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-21.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-21.JPG">
+			<img class="grid-images" src="images/portfolio-21.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-22.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-22.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-22.JPG">
+			<img class="grid-images" src="images/portfolio-22.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-23.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-23.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-23.JPG">
+			<img class="grid-images" src="images/portfolio-23.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-24.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-24.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-24.JPG">
+			<img class="grid-images" src="images/portfolio-24.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-25.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-25.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-25.JPG">
+			<img class="grid-images" src="images/portfolio-25.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-26.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-26.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-26.JPG">
+			<img class="grid-images" src="images/portfolio-26.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-27.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-27.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-27.JPG">
+			<img class="grid-images" src="images/portfolio-27.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-28.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-28.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-28.JPG">
+			<img class="grid-images" src="images/portfolio-28.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-29.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-29.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-29.JPG">
+			<img class="grid-images" src="images/portfolio-29.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-30.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-30.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-30.JPG">
+			<img class="grid-images" src="images/portfolio-30.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-31.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-31.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-31.JPG">
+			<img class="grid-images" src="images/portfolio-31.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-32.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-32.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-32.JPG">
+			<img class="grid-images" src="images/portfolio-32.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-33.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-33.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-33.JPG">
+			<img class="grid-images" src="images/portfolio-33.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-34.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-34.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-34.JPG">
+			<img class="grid-images" src="images/portfolio-34.JPG">
 		</a>
-		<a href="#" class="gallery" data-featherlight="images/_portfolio/portfolio-35.JPG">
-			<img class="grid-images" src="images/_portfolio/portfolio-35.JPG">
+		<a href="#" class="gallery" data-featherlight="images/portfolio-35.JPG">
+			<img class="grid-images" src="images/portfolio-35.JPG">
 		</a>
 	</section>
 	<!-- javaScripts -->
