--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 	<script type="text/javascript" src="js/featherlight.min.js"></script>
 	<script type="text/javascript" src="js/featherlight.gallery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.detect_swipe.js"></script>
+	<script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
 	<script type="text/javascript" src="js/project.js"></script>
 </body>
 </html>
